# AIInvite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SERVER_ACCESS.md  docker-compose.production.yml  docker-compose.yml  flake.nix  shell.nix
.github/workflows/: deploy.yml
deploy/: .env.production.example  Caddyfile.template
frontend/: .env.example  README.md  components.json  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(public)/: layout.tsx  page.tsx
frontend/components/auth/: auth-form-shell.tsx  auth-provider.tsx  login-page-client.tsx  protected-app-shell.tsx  register-page-client.tsx
frontend/components/cabinet/: confirm-dialog.tsx  csv-import-panel.tsx  event-card.tsx  event-create-page-client.tsx  event-form.tsx  guest-form-dialog.tsx  guest-table.tsx  rsvp-form-preview.tsx  rsvp-question-editor.tsx  section-card.tsx  section-form.tsx
frontend/hooks/: use-api-state.ts  use-auth.ts  use-protected-route.ts
frontend/lib/: constants.ts  places.ts  storage.ts  timezones.ts  utils.ts
migrations/: 0001_init_core.sql  0002_seed_templates.sql  0003_guests.sql  0004_rsvp.sql  0005_guest_invite_tokens.sql  20260412131500_init.sql  20260415120000_lead_requests.sql  20260417110000_drop_lead_requests.sql
scripts/: dev-db.sh
scripts/deploy/: bootstrap-server.sh  deploy-frontend-production.sh  remote-deploy.sh  render_caddy.sh
src/: app.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  site.rs
src/api/: auth.rs  events.rs  guests.rs  health.rs  mod.rs  page_sections.rs  public.rs  rsvp.rs  templates.rs
src/app/: config.rs  mod.rs  router.rs  state.rs
src/common/: auth.rs  error.rs  mod.rs  slug.rs
src/db/: pool.rs
src/docs/: openapi.rs
src/domain/: mod.rs
src/dto/: auth.rs  events.rs  guests.rs  mod.rs  page_sections.rs  public.rs  rsvp.rs  templates.rs
src/repos/: events_repo.rs  guests_repo.rs  mod.rs  page_sections_repo.rs  pages_repo.rs  rsvp_repo.rs  templates_repo.rs  users_repo.rs
src/services/: auth_service.rs  event_service.rs  guest_service.rs  mod.rs  page_sections_service.rs  page_service.rs  rsvp_service.rs  templates_service.rs
tests/: auth_api.rs  events_api.rs  guests_api.rs  health_api.rs  healthchecks_api.rs  page_sections_api.rs  public_api.rs  rsvp_api.rs  templates_api.rs
(+87 files in other folders)
