[package]
name = "aiinvite"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
dotenvy = "0.15"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "vendored"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
